examples/simple-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
  labels:
    app: simple-app
spec:
  selector:
    app: simple-app
  ports:
    - name: http
      port: 4180
      targetPort: 4180
