examples/simple-app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple-app
spec:
  hosts:
    - "simple-app.example.com"
  gateways:
    - istio-system/oauth2-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: simple-app
            port:
              number: 4180
